fixed word wrap error for long links

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ Author URI: https://github.com/rciullo
 Description: This is the theme of University of Central Florida Libraries.
 Text Domain: UCFLibraries
 
-Version: 1.5.6
+Version: 1.5.7
 
 */
 @import url(https://fonts.googleapis.com/css?family=Droid+Sans:400,700|Roboto+Slab:700|Roboto:500,700,400);
@@ -57,7 +57,14 @@ h1 { margin: 1em 0;}
 
 /*Misc*/
 
-p, p a { word-wrap: break-word; }
+p, p a { 
+	word-wrap: break-word; 
+    word-break: break-word;
+
+-webkit-hyphens: auto;
+   -moz-hyphens: auto;
+        hyphens: auto;
+}
 
 
 img {
